Added more classes to represent database tables

--- a/Bookish.DataAccess/Bookish.DataAccess.csproj
+++ b/Bookish.DataAccess/Bookish.DataAccess.csproj
@@ -45,7 +45,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Author.cs" />
     <Compile Include="Book.cs" />
+    <Compile Include="CheckedOut.cs" />
+    <Compile Include="Copy.cs" />
     <Compile Include="DataAccessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
